# Tadapt

./: .gitmodules  CMakeLists.txt  Content  README.md
.github/workflows/: cmake.yml
Editor/: Application.cpp  Application.h  CMakeLists.txt  Object.cpp  Object.h  main.cpp
